--- a/akuaa/templates/akuaa/base.html
+++ b/akuaa/templates/akuaa/base.html
@@ -1068,6 +1068,13 @@
 }
   /* ------------Counters close ----------*/
 
+.links {
+  color: #2F58CD;
+}
+.links:hover {
+  text-decoration: none;
+  color: #2F58CD;
+}
 </style>
 
 <body>
