--- a/akuaa/templates/akuaa/career.html
+++ b/akuaa/templates/akuaa/career.html
@@ -19,32 +19,38 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <form style="background-color: #EEE; padding:10%" method="POST" class="pt-4" enctype="multipart/form-data">
+                <form id="form" style="background-color: #EEE; padding:10%" method="POST" class="pt-4" enctype="multipart/form-data">
                     {% csrf_token %}
                     <h3 style="font-family: Merrimeter;"  class="text-center">Fill the form below to submit your resume</h3>
                     <div class="form-group">
-                        <label class="required" for="name">Full Name</label>
-                        <input type="text" class="form-control form-control-lg mt-2" id="name" name="name">
+                        <label class="required" for="fullname">Full Name</label>
+                        <input type="text" class="form-control form-control-lg mt-2" id="fullname" name="fullname">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label class="required" for="email">Email</label>
                         <input type="email" class="form-control form-control-lg mt-2" id="email" name="email">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label class="required" for="Phone">Phone Number</label>
                         <input type="number" class="form-control form-control-lg mt-2" id="phone" name="phone">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label class="required" for="position">What position are you applying for?</label>
                         <input type="text" class="form-control form-control-lg mt-2" id="position" name="position">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label class="required" for="location">Location</label>
                         <input type="text" class="form-control form-control-lg mt-2" id="location" name="location">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label class="required" for="linkedin">LinkedIn Profile</label>
                         <input type="text" class="form-control form-control-lg mt-2" id="linkedin" name="linkedin" placeholder="Paste your link">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label for="portfolio">Portfilio</label>
@@ -53,10 +59,12 @@
                     <div class="form-group mt-2">
                         <label class="required" for="choice1">Are you authorized to work in the United States for any employment?</label>
                         <input type="text" class="form-control form-control-lg mt-2" id="choice1" name="choice1" placeholder="Yes or No">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label for="choice2">Do you now or in the future require sponsorship to continue working in the United States?</label>
                         <input type="text" class="form-control form-control-lg mt-2" id="choice2" name="choice2" placeholder="Yes or No">
+                        
                     </div>
                     <!-- <div class="form-group mt-2">
                         <label class="required" for="choice1">Are you authorized to work in the United States for any employment?</label>
@@ -81,6 +89,7 @@
                     <div class="form-group mt-2">
                         <label class="required" for="resume">Resume/CV</label>
                         <input type="file" class="form-control-file" id="resume" name="resume">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group mt-2">
                         <label for="cover_letter">Cover Letter</label>
