--- a/akuaa/templates/akuaa/home.html
+++ b/akuaa/templates/akuaa/home.html
@@ -7,12 +7,12 @@
         <div class="col-md-12">
             <div class="welcome">
                 <div class="welcome-img text-center">
-                   <h3 style="font-size: 50px; color:#fff; font-family:Merrimeter">DaSpinstress LLC</h3>
+                   <h3 class="cover-text" style="font-size: 50px; color:#fff; font-family:Merrimeter">DaSpinstress LLC</h3>
                 </div>
-                <h5 style="color:#fff;" class="text-center welcome-text-2">... In Touch, Top in Mind</h5>
-                <div class="text-center">
+                <h5 style="color:#fff;" class="cover-text2 text-center welcome-text-2">... In Touch, Top in Mind</h5>
+                <!-- <div class="text-center">
                     <a class="btn btn-outline-secondary" href="https://djakuaa.com/">Read More</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
