--- a/akuaa/templates/akuaa/home.html
+++ b/akuaa/templates/akuaa/home.html
@@ -163,25 +163,25 @@
                 <div class="carousel-item active">
                     <div class="testimonial4_slide">
                         <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
-                        <p>If you're looking for a reliable agency to handle your brand, look no further than DaSpinstress LLC. Their services are top-notch, and their commitment to delivering great service is unparalleled</p>
-                        <h4>Candice A</h4>
+                        <h4 class="mt-3">Candice A</h4>
                         <h4>Entrepreneur</h4>
+                        <p>If you're looking for a reliable agency to handle your brand, look no further than DaSpinstress LLC. Their services are top-notch, and their commitment to delivering great service is unparalleled</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="testimonial4_slide">
                         <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
+                        <h4 class="mt-3">Zane</h4>
+                        <h4>Product Manager</h4>
                         <p> Working with DaSpinstress was a great experience. They were professional, knowledgeable, and provided quality results in a timely manner. I would highly recommend them to anyone in need of digital marketing services.</p>
-                        <h4>Zane</h4>
-                        <h4>Product Manager</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="testimonial4_slide">
                         <img src="{% static 'akuaa/images/testimonial-profile.png' %}" class="img-circle img-responsive" />
-                        <p>I've been working with DaSpinstress for abuut 2 years, and I can confidently say that they are the best in the market. Their commitment to sustainability is also a huge plus.</p>
-                        <h4>Paul T</h4>
+                        <h4 class="mt-3">Paul T</h4>
                         <h4>Product Manager</h4>
+                        <p>I've been working with DaSpinstress for abuut 2 years, and I can confidently say that they are the best in the market. Their commitment to sustainability is also a huge plus.</p>
                     </div>
                 </div>
             </div>
