--- a/akuaa/templates/akuaa/career.html
+++ b/akuaa/templates/akuaa/career.html
@@ -6,6 +6,17 @@
         <h4 class="page-title pt-4">Careers</h4>
     </div>
 </section>
+<div class="row">
+    <div class="col-md-12">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+  </div>
 <section>
     <div class="container">
         <div class="text-center pt-4 pb-4">
