--- a/akuaa/templates/akuaa/contact.html
+++ b/akuaa/templates/akuaa/contact.html
@@ -6,7 +6,17 @@
         <h4 class="page-title pt-4">Contact Us</h4>
     </div>
 </section>
-
+<div class="row">
+    <div class="col-md-12">
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+  </div>
 <section class="contact-form pt-5">
     <div class="container">
         <div class="row">
